test/e2e/chainsaw/aigateway/aigateway-policy/04-update-secret-for-aigateway-policy-secretRef-config.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ($aigw_policy_secretref_name)
  namespace: ($namespace)
  labels:
    konghq.com/secret: "true"
type: Opaque
stringData:
  config: |
    add:
      headers:
        - "Modified-By-Policy-Secretref-Updated:Kong-Operator-Chainsaw-Test"
