test/e2e/chainsaw/aigateway/aigateway-policy/00-assert-aigateway-policy-programmed.yaml
# Assert the AIGatewayPolicy to be programmed.
# Required bindings:
#  - namespace: The namespace where the AIGatewayPolicy resource was created.
#  - aigw_policy_name: The name of the AIGatewayPolicy resource to be asserted.

apiVersion: aiconfiguration.konghq.com/v1alpha1
kind: AIGatewayPolicy
metadata:
  name: ($aigw_policy_name)
  namespace: ($namespace)
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
  (id != null): true
